# image_convert_qt

./: .gitignore  README.md  image_converter.py  main.py  main.ui  pyproject.toml  style.qss  test.py  ui_mainwindow.py  utils.py
.trae/rules/: project_rules.md
core/: get_exif.py  image_converter.py  image_converter_bak.py  image_output.py  utils.py
libs/: rawpy-0.25.1-cp313-cp313-win_amd64.whl
managers/: __init__.py  grid_view_manager.py  image_list_manager.py  thumbnail_manager.py
services/: conversion_service.py  image_loader_service.py
widgets/: thumbnail_grid_view.py
