[project]
name = "image-convert-qt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exifread>=3.5.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow-heif>=1.1.1",
    "pyside6>=6.10.0",
    "rawpy",
]

[tool.uv.sources]
rawpy = { path = "libs/rawpy-0.25.1-cp313-cp313-win_amd64.whl" }
